fixed form alignment and added warning for extra bags

--- a/src/components/User Form/NewUser.css
+++ b/src/components/User Form/NewUser.css
@@ -1,6 +1,15 @@
-
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .new-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
     background-color: rgb(30, 59, 111);
     padding: 1rem;
     margin: 2rem auto;
@@ -21,7 +30,8 @@
     background-color:rgb(24, 122, 208);
     color: white;
     border-radius: 12px;
-    margin: 1rem 1rem 1rem 1rem;
+    margin: 3px 1rem 3px 1rem;
+    width: 150px;
   }
   
   .new-user button:hover,
